--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- iText PDF library -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.3</version>
+		</dependency>
+
 		<!-- Lombok for Cleaner Code -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
