--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Dockerize Vehicle Tracking System 🚗
+name: Build and Dockerize Vehicle Tracking System 🚗📦
 
 on:
   push:
@@ -20,8 +20,11 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
+    - name: Install Maven
+      run: sudo apt-get update && sudo apt-get install -y maven
+
     - name: Build Project with Maven
-      run: mvn clean package -DskipTests
+      run: mvn clean install -DskipTests
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -38,4 +41,3 @@ jobs:
         context: .
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/vehicle-tracking-system:latest
-
